lab3/react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  namespace: labs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: ifilyaninitmo/itdt-contained-frontend:master
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: react
  namespace: labs
spec:
  selector:
    app: react
  ports:
  - port: 3000
    targetPort: 3000
